Updated the git documentaion with docekr command